--- a/pom.xml
+++ b/pom.xml
@@ -102,8 +102,8 @@
 					<resources>
 						<resource>
 							<targetPath>/</targetPath>
-							<directory>${project.build.directory}</directory>
-							<include>${project.build.finalName}.jar</include>
+							<!--<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}.jar</include>-->
 						</resource>
 					</resources>
 				</configuration>
