--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<docker.image.prefix>demo</docker.image.prefix>
-		<project.build.directory>demo</project.build.directory>
-		<project.build.finalName>demo</project.build.finalName>
+		<!--<project.build.directory>demo</project.build.directory>
+		<project.build.finalName>demo</project.build.finalName>-->
 	</properties>
 
 	<dependencies>
