--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<docker.image.prefix>demo</docker.image.prefix>
+		<docker.image.prefix>yuankk</docker.image.prefix>
 		<!--<project.build.directory>demo</project.build.directory>
 		<project.build.finalName>demo</project.build.finalName>-->
 	</properties>
